--- a/testesresultados.tex
+++ b/testesresultados.tex
@@ -80,19 +80,18 @@ O sistema foi testado com duas configurações diferentes. A primeira configuração
 \end{figure}
 
 
-\subsection{Primeiro teste: oito classes}
+\subsection{Primeiro teste: 8 objetos}
 
 Inicialmente cada objeto foi posicionado no ambiente de testes e foram efetuadas $360$ capturas. Uma captura a cada $1^o$, tanto para o fundo, quanto para o objeto. As imagens foram salvas e a classe e ângulo de captura armazenados. Após capturar as imagens para todos os objetos os descritores foram calculados conforme exposto no capitulo \ref{chap:desenv}. Tanto a rede de classificação quanto as redes de estimativa de ângulo foram treinadas.
-Na sequencia foram capturas 20 imagens em rotações aleatórias de cada objeto e as respectivas imagens de fundo para testar o sistema. Novamente os dados foram armazenados. O sistema foi executado para o total de 160 imagens de teste (20 para cada classe) e o resultado foi comparado com os valores esperados. A comparação entre valores de classe esperados e obtidos pode ser visto na matriz de confusão apresentada na figura \ref{}. Para a estimativa do ângulo o resultado pode ser visto na figura \ref{}.
+Na sequencia foram capturas 20 imagens em rotações aleatórias de cada objeto e as respectivas imagens de fundo. Novamente os dados foram armazenados. O sistema foi executado para as 160 imagens de teste capturadas e o resultado foi comparado com os valores esperados. A comparação entre valores de classe esperados e obtidos pode ser visto na matriz de confusão apresentada na figura \ref{fig:testes_teste1_matriz}. Para a estimativa do ângulo o resultado pode ser visto na figura \ref{fig:testes_teste1_erros}.
 
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=1\textwidth]{./figs/8-classes.png}
+	\includegraphics[width=0.5\textwidth]{./figs/8-classes.png}
 	\caption{Matriz de confusão para 8 objetos (formando 16 classes).}
 	\fonte{Autoria própria}
 	\label{fig:testes_teste1_matriz}
 \end{figure}
-
 
 \begin{figure}[H]
         \centering
@@ -114,23 +113,68 @@ Na sequencia foram capturas 20 imagens em rotações aleatórias de cada objeto e a
 		\label{fig:testes_teste1_maximo}
         \end{subfigure}
 
-	\caption{Erros e desvios para cada classe de objetos.}
+	\caption{Erros e desvios para cada objeto.}
 	\fonte{Autoria própria}
 	\label{fig:testes_teste1_erros}
 \end{figure}
 
 
+\subsection{Segundo teste: 16 objetos}
 
+O mesmo procedimento executado para o primeiro teste foi executado para o segundo. A diferença foi apenas o número de objetos utilizados que aumentou para 16. Foram capturadas também 20 imagens em posições aleatórias para o teste de cada objeto.
+A matriz de confusão é apresentada na figura \ref{fig:testes_teste2_matriz} e o resultado da estimativa de ângulo é apresentado na figura \ref{fig:testes_teste2_erros}.
 
-% treinamento
-% amostra de 1 em 1 grau
-% 20 amostras aleatórias para teste
+TODO: trocar imagens
 
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.5\textwidth]{./figs/8-classes.png}
+	\caption{Matriz de confusão para 16 objetos (formando 32 classes).}
+	\fonte{Autoria própria}
+	\label{fig:testes_teste2_matriz}
+\end{figure}
 
+\begin{figure}[H]
+        \centering
+	\begin{subfigure}[b]{0.6\textwidth}
+                \includegraphics[width=\textwidth]{./figs/8-classes-erro-medio.png}
+	        \caption{Erro médio da estimativa do ângulo para 8 objetos.}
+		\label{fig:testes_teste2_medio}
+        \end{subfigure}
+
+        \begin{subfigure}[b]{0.6\textwidth}
+                \includegraphics[width=\textwidth]{./figs/8-classes-desvio.png}
+	        \caption{Desvio padrão do erro da estimativa do ângulo para 8 objetos.}
+		\label{fig:testes_teste2_desvio}
+        \end{subfigure}
+       
+	\begin{subfigure}[b]{0.6\textwidth}
+                \includegraphics[width=\textwidth]{./figs/8-classes-erro-maximo.png}
+	        \caption{Erro máximo da estimativa do ângulo para 8 objetos.}
+		\label{fig:testes_teste2_maximo}
+        \end{subfigure}
+
+	\caption{Erros e desvios para cada objeto.}
+	\fonte{Autoria própria}
+	\label{fig:testes_teste2_erros}
+\end{figure}
 
 
 \section{Considerações} \label{sec:testes_consideracoes}
 
-Nesse capítulo apresentou-se um ambiente de testes que possibilitou a validação do sistema apresentado no capitulo \ref{chap:desenv}.
-Utilizando o ambiente forma executados....
-obtendo...
+Nesse capítulo apresentou-se um ambiente de testes automatizado que possibilitou a validação do sistema apresentado no capitulo \ref{chap:desenv}. Utilizando o ambiente foram executados dois grupos de testes. O primeiro com 8 objetos e o segundo com 16 objetos. 
+
+O sistema mostrou-se capaz de classificar todos os objetos corretamente com $100\%$ de acerto. Isso se deu devido à qualidade dos descritores calculados, que permitiram resumir as principais características de cada classe. Além disso a topologia da rede de classificação teve importante papel para a convergência no treinamento e para a qualidade de decisão. Inicialmente havia sido utilizada uma rede com apenas uma saída, onde cada classe estava associada a uma faixa de valores entre $0$ e $1$. O resultado dessa abordagem inicial está exposto na figura \ref{fig:testes_teste0_matriz}. Como se pode ver, a taxa de acerto foi de apenas $78\%$, o que é inaceitável para o problema pois se há um erro na classificação automaticamente a estimativa do angulo falhará também.
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.45\textwidth]{./figs/6-hiddenlayers.png}
+	\caption{Matriz de confusão para 8 objetos - rede com 1 saída.}
+	\fonte{Autoria própria}
+	\label{fig:testes_teste0_matriz}
+\end{figure}
+
+Na estimativa do ângulo obteve se a precisão de $\pm4.1^o$, o que representa $2.25\%$ do total de $360^o$ possíveis. O erro médio no entanto manteve-se em $1.3^o$, com desvio de $0.85^o$. O erro na estimativa do ângulo é bastante influenciada pelo sucesso na etapa de segmentação e normalização da imagem. É necessário portanto para obter bons resultados controlar ao máximo as condições externas de captura das imagens. Condições boas de iluminação por exemplo tendem a melhorar o resultado da etapa de segmentação. 
+
+Os testes mostraram portanto que o sistema foi capaz de identificar os objetos corretamente e estimar a posição angular com precisão de $\pm4.1^o$.
+
