--- a/testesresultados.tex
+++ b/testesresultados.tex
@@ -6,16 +6,15 @@ A seção \ref{sec:testes_ambiente} apresenta um ambiente de testes, que possibili
 
 \section{Ambiente de testes} \label{sec:testes_ambiente}
 
-Inicialmente para validar o sistema proposto é necessário a definição dos objetos reconhecidos. Com o objetivo de possibilitar a validação do sistema porém sem comprometer a aplicação real do projeto utilizam-se os objetos dispostos na figura \ref{fig:testes_objetos}. Os objetos são caracteres alfanuméricos, formas geométricas básicas e algumas formas aleatórias. Os objetos foram selecionados com o objetivo de testar a robustez do sistema. Portanto foram utilizadas formas semelhantes, como o carácter 'S' e o número '5'. Além disso existem algumas peculiaridades em alguns caracteres. O carácter 'S', por exemplo, possui a parte superior ligeiramente menor que a inferior, avaliando a robustez e precisão da estimativa de ângulo.
+Inicialmente para validar o sistema proposto é necessária a definição dos objetos a serem reconhecidos. Com o objetivo de possibilitar a validação do sistema porém sem comprometer a aplicação futuramente pretendida para o projeto selecionou-se os objetos dispostos na figura \ref{fig:testes_objetos}. Os objetos são caracteres alfanuméricos, formas geométricas básicas e algumas formas aleatórias. Os objetos foram selecionados com o objetivo de testar a robustez do sistema. Portanto foram utilizadas formas semelhantes, como o carácter ``S'' e o número ``5'', o carácter ``A'' e sua forma em negrito ``{\bf A}'', um triangulo retângulo e um triângulo isósceles. Além disso existem algumas peculiaridades em alguns caracteres. O carácter ``S'', por exemplo, possui a parte superior ligeiramente menor que a inferior, avaliando a robustez e precisão da estimativa de ângulo. Para posteriores referências nomeou-se os objetos da figura \ref{fig:testes_objetos} como segue, da esquerda para a direita e de cima para baixo tem-se:  $A$, $C$, $5$, $T$, $R$, $G$, $S$, $6$, $q$, $tr$, $l$, $Ab$, $ti$, $bn$, $\$$, $sn$.
 
-TODO: inserir imagem.
-%\begin{figure}[H]
-%	\centering
-%	\includegraphics[width=0.9\textwidth]{./figs/testes_objetos.jpg}
-%	\caption{Objetos de teste.}
-%	\fonte{Autoria própria}
-%	\label{fig:testes_objetos}
-%\end{figure}
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.9\textwidth]{./figs/16-objetos.jpg}
+	\caption{Objetos de teste.}
+	\fonte{Autoria própria}
+	\label{fig:testes_objetos}
+\end{figure}
 
 Para facilitar a execução de testes o ambiente deve permitir a captura de imagens dos objetos em diversas orientações angulares, e possibilitar também o reposicionamento automático dos objetos para outros ângulos. Um ambiente que atende a esses requisitos foi montado utilizando o kit de montagem de robôs da LEGO chamado \emph{Mindstorms} \cite{MINDSTORMS}. O ambiente foi montado conforme mostra a figura \ref{fig:testes_ambiente}.
 
@@ -69,98 +68,90 @@ Para completar o ambiente de testes foi utilizado uma \emph{webcam} acessada pel
 
 \section{Testes} \label{sec:testes_testes}
 
-O sistema foi testado com duas configurações diferentes. A primeira configuração foi formada por todos os objetos mostrados na figura \ref{fig:testes_teste1_objetos}. Ou seja, oito caracteres alfa-numéricos. O segundo teste foi efetuado com ... TODO
-
-\begin{figure}[H]
-	\centering
-	\includegraphics[width=0.5\textwidth]{./figs/testes_teste1_objetos.jpg}
-	\caption{Objetos para o primeiro teste.}
-	\fonte{Autoria própria}
-	\label{fig:testes_teste1_objetos}
-\end{figure}
-
+O sistema foi testado com duas configurações diferentes. A primeira configuração foi formada pelos oito primeiros objetos da figura \ref{fig:testes_objetos}. Ou seja:  $A$, $C$, $5$, $T$, $R$, $G$, $S$, $6$. A segunda configuração foi formada com todos os objetos apresentados na figura, ou seja:  $A$, $C$, $5$, $T$, $R$, $G$, $S$, $6$, $q$, $tr$, $l$, $Ab$, $ti$, $bn$, $\$$, $sn$.
 
 \subsection{Primeiro teste: 8 objetos}
 
 Inicialmente cada objeto foi posicionado no ambiente de testes e foram efetuadas $360$ capturas. Uma captura a cada $1^o$, tanto para o fundo, quanto para o objeto. As imagens foram salvas e a classe e ângulo de captura armazenados. Após capturar as imagens para todos os objetos os descritores foram calculados conforme exposto no capitulo \ref{chap:desenv}. Tanto a rede de classificação quanto as redes de estimativa de ângulo foram treinadas.
-Na sequencia foram capturas 20 imagens em rotações aleatórias de cada objeto e as respectivas imagens de fundo. Novamente os dados foram armazenados. O sistema foi executado para as 160 imagens de teste capturadas e o resultado foi comparado com os valores esperados. A comparação entre valores de classe esperados e obtidos pode ser visto na matriz de confusão apresentada na figura \ref{fig:testes_teste1_matriz}. Para a estimativa do ângulo o resultado pode ser visto na figura \ref{fig:testes_teste1_erros}.
+
+Na sequencia foram capturas 20 imagens em rotações aleatórias de cada objeto e as respectivas imagens de fundo. Novamente os dados foram armazenados. O sistema foi executado para as 160 imagens de teste capturadas e o resultado foi comparado com os valores esperados. A comparação entre valores de classe esperados e obtidos pode ser visto na matriz de confusão apresentada na figura \ref{fig:testes_teste1_matriz}. Para a estimativa do ângulo o resultado pode ser visto nas figuras \ref{fig:testes_teste1_medio}, \ref{fig:testes_teste1_desvio} e \ref{fig:testes_teste1_maximo}.
 
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=0.5\textwidth]{./figs/8-classes.png}
+	\includegraphics[width=0.7\textwidth]{./figs/8-classes.png}
 	\caption{Matriz de confusão para 8 objetos (formando 16 classes).}
 	\fonte{Autoria própria}
 	\label{fig:testes_teste1_matriz}
 \end{figure}
 
+
 \begin{figure}[H]
         \centering
-	\begin{subfigure}[b]{0.6\textwidth}
-                \includegraphics[width=\textwidth]{./figs/8-classes-erro-medio.png}
-	        \caption{Erro médio da estimativa do ângulo para 8 objetos.}
-		\label{fig:testes_teste1_medio}
-        \end{subfigure}
-
-        \begin{subfigure}[b]{0.6\textwidth}
-                \includegraphics[width=\textwidth]{./figs/8-classes-desvio.png}
-	        \caption{Desvio padrão do erro da estimativa do ângulo para 8 objetos.}
-		\label{fig:testes_teste1_desvio}
-        \end{subfigure}
-       
-	\begin{subfigure}[b]{0.6\textwidth}
-                \includegraphics[width=\textwidth]{./figs/8-classes-erro-maximo.png}
-	        \caption{Erro máximo da estimativa do ângulo para 8 objetos.}
-		\label{fig:testes_teste1_maximo}
-        \end{subfigure}
-
-	\caption{Erros e desvios para cada objeto.}
+        \includegraphics[width=0.6\textwidth]{./figs/8-classes-erro-medio.png}
+        \caption{Erro médio da estimativa do ângulo para 8 objetos.}
 	\fonte{Autoria própria}
-	\label{fig:testes_teste1_erros}
+	\label{fig:testes_teste1_medio}
+\end{figure}
+
+\begin{figure}[H]
+        \centering
+        \includegraphics[width=0.6\textwidth]{./figs/8-classes-desvio.png}
+	\caption{Desvio padrão do erro da estimativa do ângulo para 8 objetos.}
+	\fonte{Autoria própria}
+	\label{fig:testes_teste1_desvio}
+\end{figure}
+
+\begin{figure}[H]
+        \centering
+        \includegraphics[width=0.6\textwidth]{./figs/8-classes-erro-maximo.png}
+	\caption{Erro máximo da estimativa do ângulo para 8 objetos.}
+	\fonte{Autoria própria}
+	\label{fig:testes_teste1_maximo}
 \end{figure}
 
 
 \subsection{Segundo teste: 16 objetos}
 
-O mesmo procedimento executado para o primeiro teste foi executado para o segundo. A diferença foi apenas o número de objetos utilizados que aumentou para 16. Foram capturadas também 20 imagens em posições aleatórias para o teste de cada objeto.
-A matriz de confusão é apresentada na figura \ref{fig:testes_teste2_matriz} e o resultado da estimativa de ângulo é apresentado na figura \ref{fig:testes_teste2_erros}.
+O mesmo procedimento executado para o primeiro teste foi executado para o segundo, no entanto com algumas diferenças. Foram utilizados 16 objetos distintos. Para o objeto $q$ foram efetuadas $450$ capturas de $0$ a $90^o$ por se tratar de um objeto simétrico. Para o objeto $l$ foram efetuadas $180$ capturas de $0$ a $180^o$ pelo mesmo motivo. Para os demais objetos foram efetuadas $360$ capturas. Após a captura as redes de classificação e estimativa de angulo foram treinadas.
 
-TODO: trocar imagens
+Em seguida foram capturadas 20 imagens em rotações aleatórias para cada objeto, totalizando 320 imagens de teste. O sistema foi executado e os resultados foram comparados com os valores esperados conforme a matriz de confusão apresentada na figura \ref{fig:testes_teste2_matriz}. A matriz de confusão apresentada mostra apenas 30 classes ao invés de 32 como esperado. Isso se dá pelo fato dos objetos $q$ e $l$ serem simétricos resultando sempre em um autovetor correto para a normalização. Para a estimativa do ângulo o resultado pode ser visto nas figuras \ref{fig:testes_teste2_medio}, \ref{fig:testes_teste2_desvio} e \ref{fig:testes_teste2_maximo}.
 
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=0.5\textwidth]{./figs/8-classes.png}
-	\caption{Matriz de confusão para 16 objetos (formando 32 classes).}
+	\includegraphics[width=1\textwidth]{./figs/16-classes.png}
+	\caption{Matriz de confusão para 16 objetos (formando 30 classes).}
 	\fonte{Autoria própria}
 	\label{fig:testes_teste2_matriz}
 \end{figure}
 
 \begin{figure}[H]
         \centering
-	\begin{subfigure}[b]{0.6\textwidth}
-                \includegraphics[width=\textwidth]{./figs/8-classes-erro-medio.png}
-	        \caption{Erro médio da estimativa do ângulo para 8 objetos.}
-		\label{fig:testes_teste2_medio}
-        \end{subfigure}
-
-        \begin{subfigure}[b]{0.6\textwidth}
-                \includegraphics[width=\textwidth]{./figs/8-classes-desvio.png}
-	        \caption{Desvio padrão do erro da estimativa do ângulo para 8 objetos.}
-		\label{fig:testes_teste2_desvio}
-        \end{subfigure}
-       
-	\begin{subfigure}[b]{0.6\textwidth}
-                \includegraphics[width=\textwidth]{./figs/8-classes-erro-maximo.png}
-	        \caption{Erro máximo da estimativa do ângulo para 8 objetos.}
-		\label{fig:testes_teste2_maximo}
-        \end{subfigure}
-
-	\caption{Erros e desvios para cada objeto.}
+        \includegraphics[width=1\textwidth]{./figs/16-classes-erro-medio.png}
+        \caption{Erro médio da estimativa do ângulo para 16 objetos.}
 	\fonte{Autoria própria}
-	\label{fig:testes_teste2_erros}
+	\label{fig:testes_teste2_medio}
+\end{figure}
+
+\begin{figure}[H]
+        \centering
+        \includegraphics[width=1\textwidth]{./figs/16-classes-desvio.png}
+	\caption{Desvio padrão do erro da estimativa do ângulo para 16 objetos.}
+	\fonte{Autoria própria}
+	\label{fig:testes_teste2_desvio}
+\end{figure}
+
+\begin{figure}[H]
+        \centering
+        \includegraphics[width=1\textwidth]{./figs/16-classes-erro-maximo.png}
+	\caption{Erro máximo da estimativa do ângulo para 16 objetos.}
+	\fonte{Autoria própria}
+	\label{fig:testes_teste2_maximo}
 \end{figure}
 
 
 \section{Considerações} \label{sec:testes_consideracoes}
+
+todo comparar resultado angulo 2 testees
 
 Nesse capítulo apresentou-se um ambiente de testes automatizado que possibilitou a validação do sistema apresentado no capitulo \ref{chap:desenv}. Utilizando o ambiente foram executados dois grupos de testes. O primeiro com 8 objetos e o segundo com 16 objetos. 
 
